[package]
name = "marginfi-interface"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marginfi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
client = []
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl =  "0.28.0"
fixed = "~1.12.0"
fixed-macro = "1.2.0"
solana-program = "1.16.23"